--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "binary-upload-boom",
+  "name": "mediTrack",
   "version": "1.0.0",
-  "description": "100Devs Social Network",
+  "description": "Keep all you medical appointments in one place",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -12,7 +12,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.1",
-    "cloudinary": "^1.25.1",
+    "cloudinary": "^1.32.0",
+    "cloudinary-core": "^2.13.0",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
