--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mediTrack",
+  "name": "mediTracker",
   "version": "1.0.0",
   "description": "Keep all you medical appointments in one place",
   "main": "server.js",
@@ -28,6 +28,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "validator": "^13.6.0"
+    "react-calendar": "^3.9.0",
+    "validator": "^13.6.0",
+    "yarn": "^1.22.19"
   }
 }
