--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^3.4.1",
     "cloudinary": "^1.32.0",
     "cloudinary-core": "^2.13.0",
     "connect-mongo": "^3.2.0",
@@ -29,7 +29,11 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react-calendar": "^3.9.0",
+    "swiper": "^8.4.3",
     "validator": "^13.6.0",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
